  * Bump Standards-Version to 3.6.2.
  * debian/postgresql-common.postinst: Setup user 'postgres' with /bin/bash as
    default shell. Closes: #320810
  * pg_wrapper, debian/postgresql-common.links: Wrap reindexdb, it is a
    standard client program in 8.1.
  * pg_createcluster: Do not create autovacuum log file for servers >= 8.1.

 -- Martin Pitt <mpitt@debian.org>  Mon, 22 Aug 2005 23:44:33 +0200

postgresql-common (23) unstable; urgency=low

  * pg_maintenance: Change directory to / before changing uid to avoid "could
    not change directory" errors. Closes: #318604.
  * Drop upgrade-scripts/all_vacuum_t1.sql since it causes too much trouble
    with big databases. Replace it with upgrade-scripts/all_test_t1.sql which
    just counts the tables in the database. This should be unintrusive, fast,
    and still appropriate for testing the upgrade scripts mechanism.
    Closes: #319035
  * pg_ctlcluster: Check if autovacuum log file symlink is dangling and avoid
    warnings about uninitialized warnings. Instead print out a meaningful
    error message. Closes: #318717
  * debian/postgresql-common.postinst: Generate a dummy
    /etc/postgresql-common/root.crt if not present. Closes: #319110
  * debian/postgresql-common.postrm: Remove /etc/postgresql-common/root.crt on
    purge.
  * pg_createcluster: If /etc/postgresql-common/root.crt exists, symlink
    root.crt from the data directory. Closes: #318818
  * debian/README.Debian: Document root.crt handling.

 -- Martin Pitt <mpitt@debian.org>  Thu, 21 Jul 2005 00:44:52 +0200

postgresql-common (22) unstable; urgency=low

  * pg_createcluster: Set default authentication for TCP connections to "md5"
    instead of the old "ident sameuser" default since it makes a lot more
    sense.
  * tests/000_debs: Fix detection of whether a package is installed.
  * tests/100_encodings: Fix filtering of postmaster processes.

 -- Martin Pitt <mpitt@debian.org>  Thu, 14 Jul 2005 12:00:16 +0300
