@@ -10,8 +10,10 @@ postgresql-common (24) unstable; urgency=low
   * pg_wrapper, debian/postgresql-common.links: Wrap reindexdb, it is a
     standard client program in 8.1.
   * pg_createcluster: Do not create autovacuum log file for servers >= 8.1.
+  * PgCommon.pm: For determining avac_enable on 8.1+ servers, read
+    "autovacuum" setting from postgresql.conf.
 
- -- Martin Pitt <mpitt@debian.org>  Mon, 22 Aug 2005 23:44:33 +0200
+ -- Martin Pitt <mpitt@debian.org>  Mon, 22 Aug 2005 23:54:42 +0200
 
 postgresql-common (23) unstable; urgency=low
 
